Ready for first release

--- a/TreeSplitting/assets/treesplitting/lang/en.json
+++ b/TreeSplitting/assets/treesplitting/lang/en.json
@@ -1,7 +1,6 @@
 {
-  "block-treesplitting:choppingblock": "Chopping Block",
-  "blockdesc-treesplitting:choppingblock": "A sturdy stump for hewing logs into beams.",
-
+  "block-choppingblock": "Chopping Block",
+  "blockdesc-choppingblock": "A sturdy stump for hewing logs into beams.",
   "blockhelp-choppingblock-place": "Place Log",
   "blockhelp-choppingblock-take": "Take Log",
   "blockhelp-choppingblock-chop": "Chop"
