Refactor chopping block logic, improve recipe selection UI, and update mod information

--- a/TreeSplitting/assets/treesplitting/lang/en.json
+++ b/TreeSplitting/assets/treesplitting/lang/en.json
@@ -1,6 +1,7 @@
 {
   "block-choppingblock": "Chopping Block",
   "blockdesc-choppingblock": "A sturdy stump for hewing logs into beams.",
+  "block-choppingblocktop": " ",
   "blockhelp-choppingblock-place": "Place Log",
   "blockhelp-choppingblock-take": "Take Log",
   "blockhelp-choppingblock-chop": "Chop"
